# mrsa-ca

./: .gitignore  README.md  disease_registry.json  makefile  makefile_hoffman  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml  test.yml
alignment_pipeline/: batch_submit.sh  concatenate_studies.py  gse_list.txt  install_sra_toolkit.py  process_rnaseq.py  requirements.txt  run_quantify.sh  sample_mapper.py  setup.sh
alignment_pipeline/core/: __init__.py  processing.py
alignment_pipeline/utils/: __init__.py  fastq_utils.py  file_utils.py  index_manager.py  recovery.py  sra_toolkit_installer.py  study_cleanup.py  timing.py  xalign_index_validator.py
archs4py-stubs/archs4py/: __init__.pyi
mrsa-ca_rna_pca/: import_data.py  pca.py
mrsa_ca_rna/: AIO_Pipeline.py  factorization.py  gene_analysis.py  geo_fetcher.py  gsea.py  import_data.py  map.py  pca.py  regression.py  utils.py
mrsa_ca_rna/data/: CA_series_matrix_compat.txt  GSE176262_characteristics.json  Tier1.csv  Tier2.csv  Tier3.csv  Tier4.csv  ca_discovery_meta_GSE176260.txt  ca_validation_meta_GSE176261.txt  covid_metadata.txt  discovery_metadata_ca.txt  gene_list.txt  metadata_aether_scler.json  metadata_asthma_archs4.json  metadata_bc_archs4.json  metadata_ca_archs4.json  metadata_mrsa.csv  metadata_mrsa_josh.csv  metadata_mrsa_joshua.csv  metadata_uc_exp.json  rna_weights_scaled.csv  validation_metadata_ca.txt
mrsa_ca_rna/experiments/: wandb_pf2_l1_rank_fms.py
mrsa_ca_rna/figures/: PCA_random_comparison.py  base.py  exclude_pf2_fms.py  figure00_pca_explained.py  figure00a.py  figure01.py  figure01_pca.py  figure02_pca_loadings.py  figure03_RegressionScore.py  figure03a.py  figure03b.py  figure04.py  figure05.py  figure06.py  figure07.py  figure08.py  figure08a.py  figure08b.py  figure09.py  figure09a.py  figure10.py  figure10a.py  figure11.py  figure11a.py  figure12.py  figure12a.py  figure13.py  figure_compare_genes.py  figure_compare_uc.py  figure_data_directionality.py  figure_data_gene_distributions.py  figure_eigen_genes.py  figure_gendered_expression.py  figure_pca_beta_stability.py  figure_pca_component_stability.py  figure_pca_component_variability.py  figure_pca_components_genes.py  figure_pca_explained.py  figure_pca_loadings.py  figure_pca_predictionsXcomponents.py  (+27 more)
mrsa_ca_rna/scripts/: disease_registry.py  download_h5.py  geo_fetcher.py  process_srr_data.py  run_salmon.sh  setup_salmon.sh
mrsa_ca_rna/tests/: factor_tests.py  test_andrew_pf2.py  test_datashader.py  test_factorization.py  test_import.py
mrsa_ca_rna/wb/: wandb_pf2_l1_rank_fms.py
wandb/: latest-run
wandb/run-20250211_094837-l0c6t1sq/: run-l0c6t1sq.wandb
wandb/run-20250211_094855-v4tp7y6i/: run-v4tp7y6i.wandb
wandb/run-20250211_094912-14knm6cb/: run-14knm6cb.wandb
wandb/run-20250211_094935-n32qto44/: run-n32qto44.wandb
wandb/run-20250211_094948-8jdgxqem/: run-8jdgxqem.wandb
wandb/run-20250211_095000-43xt08pj/: run-43xt08pj.wandb
wandb/run-20250211_095018-g3evt4tz/: run-g3evt4tz.wandb
wandb/run-20250211_095028-23xa0862/: run-23xa0862.wandb
wandb/run-20250211_095039-k7712gai/: run-k7712gai.wandb
wandb/run-20250211_095054-kh9addax/: run-kh9addax.wandb
wandb/run-20250211_095102-8fgo6ijp/: run-8fgo6ijp.wandb
wandb/run-20250211_095111-vg8oc4j5/: run-vg8oc4j5.wandb
wandb/run-20250211_095124-1nwjbdzo/: run-1nwjbdzo.wandb
wandb/run-20250211_095130-s7664j7g/: run-s7664j7g.wandb
wandb/run-20250211_095136-wlq4c4bu/: run-wlq4c4bu.wandb
wandb/run-20250211_095146-ermjkogm/: run-ermjkogm.wandb
wandb/run-20250211_095151-0jrjrf9b/: run-0jrjrf9b.wandb
wandb/run-20250211_095156-5a4q88dh/: run-5a4q88dh.wandb
wandb/run-20250211_095205-pe9l0d9o/: run-pe9l0d9o.wandb
wandb/run-20250211_095214-vdklsihf/: run-vdklsihf.wandb
wandb/run-20250211_095224-y0somnnh/: run-y0somnnh.wandb
wandb/run-20250211_095236-z4m122l3/: run-z4m122l3.wandb
wandb/run-20250211_095251-atqq6jtd/: run-atqq6jtd.wandb
wandb/run-20250211_095257-3l1op1gc/: run-3l1op1gc.wandb
(+575 files in other folders)
