[project]
name = "mrsa_ca_rna"
version = "0.1.0"
description = ""
authors = [{name = "James Popoli"}, {name = "Aaron Meyer", email = "git@asmlab.org"}]
readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "ipympl>=0.9.4",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "svgutils>=0.3.4",
    "anndata>=0.10.8",
    "tensorly>=0.8.1",
    "xarray>=2024.7.0"
]

[project.scripts]
fbuild = "mrsa_ca_rna.figures.base:genFigure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"                                                  

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mrsa_ca_rna"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]