[project]
name = "mrsa_ca_rna"
version = "0.1.0"
description = ""
authors = [{name = "James Popoli"}, {name = "Aaron Meyer", email = "git@asmlab.org"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "ipympl>=0.9.4",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "svgutils>=0.3.4",
    "anndata>=0.10.8",
    "xarray>=2024.7.0",
    "cupy-cuda12x>=13.3.0",
    "tensorly @ git+https://github.com/tensorly/tensorly.git@041cd699d08ae846acbc4e921e0f490e39269760",
    "matcouply>=0.1.6",
    "wandb>=0.19.6",
    "pacmap>=0.8.0",
    "parafac2 @ git+https://github.com/meyer-lab/parafac2@constrained-cp",
]

[project.scripts]                                                        
fbuild = "mrsa_ca_rna.figures.base:genFigure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"                                                  

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mrsa_ca_rna"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
