[project]
name = "mrsa_ca_rna"
version = "0.1.0"
description = ""
authors = [{name = "James Popoli"}, {name = "Aaron Meyer", email = "git@asmlab.org"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "scikit-learn>=1.6",
    "matplotlib>=3.10",
    "ipympl>=0.9.4",
    "pandas>=2.2",
    "seaborn>=0.13.2",
    "anndata>=0.10.8",
    "wandb>=0.19.6",
    "tlviz>=0.1.1",
    "tensorly>=0.9.0",
    "h5py>=3.13.0",
    "gseapy>=1.1.8",
    "scipy>=1.15.3",
    "numpy>=2.2.6",
    "cupy-cuda12x>=13.4",
    "tqdm>=4.67.1",
    "ortools>=8.0.0,<10.0.0",
    "pacmap>=0.8.0",
    "fastcluster>=1.3.0",
]

[project.scripts]                                                        
fbuild = "mrsa_ca_rna.figures.base:genFigure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"                                                  

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mrsa_ca_rna"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # NumPy-specific checks
    "NPY",
    # Unused arguments
    "ARG",
    # type checking
    "TC",
]
